Fluid landing background on small resolutions fix

--- a/server/public/stylesheets/landing.less
+++ b/server/public/stylesheets/landing.less
@@ -413,6 +413,13 @@
    ***************************************************/
   /* Extra-small devices (small phones) */
   @media (min-width: @screen-xs-min) {
+    .header {
+      .cover {
+        background-color: rgba(255, 255, 255, 0.8);
+        .text p { font-size: 1.6em; }
+        .btn-knowmore { font-size: 1.6em; }
+      }
+    }
   }
 
   /* Medium devices (desktops, 992px and up) */
